Add GET route for user's todos of today
