# routes/web.php
@@ -20,6 +20,7 @@ Route::group(['prefix' => 'api/v1/'], function () {
     // Users
     Route::get('users/{user}/todolists', ['uses' => 'UserController@todolists']);
     Route::get('users/{user}/goals', ['uses' => 'UserController@goals']);
+    Route::get('users/{user}/todos/today', ['uses' => 'UserController@todosToday']);
 
     // Todolists
     Route::get('todolists/{todolist}/todos', ['uses' => 'TodolistController@todos']);
